# agenteazy

./: .gitignore  README.md  SECURITY_NOTES.md  pyproject.toml  test-agenteazy-live.sh
.github/workflows/: publish.yml
agenteazy/: __init__.py  agentlang.py  analyzer.py  batch.py  cli.py  config.py  deployer.py  gateway.py  gateway_deployer.py  generator.py  modal_deployer.py  registry.py  registry_deployer.py  sdk.py  wrapper_template.py
agenteazy-skills/: batch-generate.py  batch-manifest.json  mega-manifest.json
agenteazy-skills/base-convert/: agent.json  main.py
agenteazy-skills/base-decode/: agent.json  main.py
agenteazy-skills/bytes-format/: agent.json  main.py
agenteazy-skills/chardet-detect/: agent.json  main.py  requirements.txt
agenteazy-skills/color-convert/: agent.json  main.py  requirements.txt
agenteazy-skills/competitor-intel/: agent.json  main.py
agenteazy-skills/content-repurposer/: agent.json  main.py
agenteazy-skills/country-info/: agent.json  main.py  requirements.txt
agenteazy-skills/cron-parse/: agent.json  main.py  requirements.txt
agenteazy-skills/crontab-describe/: agent.json  main.py
agenteazy-skills/csv-parse/: agent.json  main.py
agenteazy-skills/csv-stats/: agent.json  main.py
agenteazy-skills/csv-to-json/: agent.json  main.py
agenteazy-skills/currency-format/: agent.json  main.py  requirements.txt
agenteazy-skills/diff-text/: agent.json  main.py
agenteazy-skills/disposable-email-check/: agent.json  main.py  requirements.txt
agenteazy-skills/domain-extract/: agent.json  main.py  requirements.txt
agentwrap/: __init__.py  analyzer.py  cli.py  generator.py  wrapper_template.py
docs/: tollbooth_e2e_report.md
tests/: test_e2e_email_validator.py  test_e2e_rami_leads.py  test_gateway_verbs.py  test_registry.py
(+134 files in other folders)
