[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentwrap"
version = "0.1.0"
description = "Turn any GitHub repo into an AI agent in one command"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
]

[project.scripts]
agentwrap = "agentwrap.cli:app"

[tool.setuptools.packages.find]
include = ["agentwrap*"]
