[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenteazy"
version = "0.2.5"
description = "Turn any GitHub repo into an AI agent in one command"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
crewai = ["crewai>=0.80.0"]
mcp = ["mcp>=1.0.0"]
all = ["langchain-core>=0.2.0", "crewai>=0.80.0", "mcp>=1.0.0"]

[project.scripts]
agenteazy = "agenteazy.cli:app"

[tool.setuptools.packages.find]
include = ["agenteazy*"]
